--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,10 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.6'
-          spec: 'src/build.spec'
+          spec: 'src/notepy.pyw'
           requirements: 'src/requirements.txt'
           upload_exe_with_name: 'NotePy'
           options: --onefile, --name "NotePy"
+      - name: List files
+        run: ls
+      
