--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
         with:
             python-version: '3.10' 
       - name: Install PyInstaller
-        run: pip install --upgrade pip PyInstaller PySide6 python-magic-bin requests python-dateutil psutil
+        run: python.exe -m pip install --upgrade pip PyInstaller PySide6
       - name: Build package
         run: python PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw
       - name: List files
