--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -19,7 +16,7 @@ jobs:
       - name: Install PyInstaller
         run: python.exe -m pip install --upgrade pip PyInstaller PySide6
       - name: Build package
-        run: python PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw
+        run: python.exe -m PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw
       - name: List files
         run: dir dist
       
