--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,11 +10,12 @@ jobs:
   pyinstaller-build:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
             python-version: '3.10' 
       - name: Install PyInstaller
-        run: dir && python.exe -m pip install --upgrade pip PyInstaller PySide6
+        run: dir && dir src && python.exe -m pip install --upgrade pip PyInstaller PySide6
       - name: Build package
         run: python.exe -m PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw
       - name: List files
