--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,26 @@ jobs:
       - name: Install PyInstaller
         run: dir && dir src && python.exe -m pip install --upgrade pip PyInstaller PySide6
       - name: Build package
-        run: python.exe -m PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw
+        run: python.exe -m PyInstaller --icon .\src\fileicon.ico .\src\notepy.pyw --onefile
       - name: List files
         run: dir dist
+      - name: Create installation script
+        run: echo """
+             @echo off
+             set "smp=%appdata%\microsoft\windows\start menu\programs"
+             cd %~dp0
+             echo If you want to proceed with installation, press any key. If you close this window, the installation won't begin. Installation path: "%userprofile%\Notepy"
+             pause > nul
+             echo Installing...
+             mkdir "%userprofile%\Notepy"
+             copy %~dp0 "%userprofile%\Notepy"
+             copy %~dp0\src "%userprofile%\Notepy"
+             echo Error code (0 means everything is okay, if it isn't, use "certutil /error %errorlevel%"): %errorlevel%
+             echo Press any key to exit...
+             pause > nul
+             """
+      - uses: actions/upload-artifact@v4
+        with:
+            name: NotePy
+            path: .
       
